--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/Deepa935314/Project-1/issues"
   },
-  "homepage": "https://github.com/Deepa935314/Project-1#readme"
+  "homepage": "https://github.com/Deepa935314/Project-1#readme",
+  "dependencies": {
+    "bootstrap": "^5.3.3"
+  }
 }
